--- a/index.html
+++ b/index.html
@@ -54,8 +54,15 @@
             </div>
           </nav>
           <div class="kontakt-line">
+            <svg class="mail" width="16" height="12">
+              <use href="./images/icon.svg#envelope"></use>
+            </svg>
             <a class="link kontakt-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="link kontakt-link" href="tel:+380961111111">+38 (096) 11 11 111</a>
+            
+              <svg class="smartphone" width="10" height="16">
+                <use href="./images/icon.svg#smartphone" ></use>
+              </svg>
+              <a class="link kontakt-link" href="tel:+380961111111">+38 (096) 11 11 111</a>
           </div>
         </div>
       </header>
@@ -67,6 +74,7 @@
             <button class="main-btn" type="button">Заказать услугу</button>
           </div>
         </section>
+      
 
         <!--Основные черты-->
         <section class="features">
@@ -74,6 +82,9 @@
             <h2 hidden>Основные черты</h2>
             <ul class="features-list list">
               <li class="features-link link">
+                <svg class="antenna" width="70" height="70">
+                  <use href="./images/icon.svg#antenna"></use>
+                </svg>
                 <h3 class="features-link-title">Внимание к деталям</h3>
                 <p class="features-link-text">
                   Идейные соображения, а также начало повседневной работы по
@@ -81,6 +92,9 @@
                 </p>
               </li>
               <li class="features-link link">
+                <svg class="clock" width="70" height="70">
+                  <use href="./images/icon.svg#clock"></use>
+                </svg>
                 <h3 class="features-link-title">Пунктуальность</h3>
                 <p class="features-link-text">
                   Задача организации, в особенности же рамки и место обучения
@@ -88,6 +102,9 @@
                 </p>
               </li>
               <li class="features-link link">
+                <svg class="vector" width="70" height="70">
+                  <use href="./images/icon.svg#vector"></use>
+                </svg>
                 <h3 class="features-link-title">Планирование</h3>
                 <p class="features-link-text">
                   Равным образом консультация с широким активом в значительной
@@ -95,6 +112,9 @@
                 </p>
               </li>
               <li class="features-link link">
+                <svg class="astronaut-icon" width="70" height="70">
+                  <use class="astronaut" href="./images/icon.svg#astronaut"></use>
+                </svg>
                 <h3 class="features-link-title">Современные технологии</h3>
                 <p class="features-link-text">
                   Значимость этих проблем настолько очевидна, что реализация
@@ -142,7 +162,6 @@
                 <img class="team-card-foto" src="./images/photo1.jpg" alt="Игорь Демьяненко" width="270"/>
                 <h3 class="team-card-name">Игорь Демьяненко</h3>
                 <p class="team-card-pro">Product Designer</p>
-              </li>
               <li class="team-link link">
                 <img class="team-card-foto" src="./images/photo2.jpg" alt="Ольга Репина" width="270" />
                 <h3 class="team-card-name">Ольга Репина</h3>
