--- a/portfolio.html
+++ b/portfolio.html
@@ -94,11 +94,17 @@
           <ul class="portfolio-cards-list list">
             <li class="portfolio-cards-item body-card-item">
               <a href="" class="card-link link">
-                <img
-                  src="./images/project1.jpg"
-                  alt="фото галереи работ"
-                  class="card-img"
-                />
+                <div class="overlay-make">
+                  <div class="overlay">
+                    <p class="img-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+
+                    <img
+                      src="./images/project1.jpg"
+                      alt="фото галереи работ"
+                      class="card-img"
+                    />
+                  </div>
+                </div>
                 <div class="body-card-text-box">
                   <h2 class="card-title">Технокряк</h2>
                   <p class="card-subtitle">Веб-сайт</p>
