--- a/index.html
+++ b/index.html
@@ -145,25 +145,34 @@
             <h2 class="doing-title">Чем мы занимаемся</h2>
             <ul class="doing-list list">
               <li class="doing-link link">
-                <img
-                  src="./images/box1.jpg"
-                  alt="Человек набирает код"
-                  width="370"
-                />
+                <div class="text-img">
+                  <img
+                    src="./images/box1.jpg"
+                    alt="Человек набирает код"
+                    width="370"
+                  />
+                  <p class="text-img-in">Десктопные приложения</p>
+                </div>
               </li>
               <li class="doing-link link">
-                <img
-                  src="./images/box2.jpg"
-                  alt="Дизайнер выбирает макет по для смартфона"
-                  width="370"
-                />
+                <div class="text-img">
+                  <img
+                    src="./images/box2.jpg"
+                    alt="Дизайнер выбирает макет по для смартфона"
+                    width="370"
+                  />
+                  <p class="text-img-in">Мобильные приложения</p>
+                </div>
               </li>
               <li class="doing-link link">
-                <img
-                  src="./images/box3.jpg"
-                  alt="Выбор цвета на планшете"
-                  width="370"
-                />
+                <div class="text-img">
+                  <img
+                    src="./images/box3.jpg"
+                    alt="Выбор цвета на планшете"
+                    width="370"
+                  />
+                  <p class="text-img-in">Дизайнерские решения</p>
+                </div>
               </li>
             </ul>
           </div>
