--- a/portfolio.html
+++ b/portfolio.html
@@ -114,11 +114,18 @@
             </li>
             <li class="portfolio-cards-item body-card-item">
               <a href="" class="card-link link">
-                <img
-                  src="./images/project2.jpg"
-                  alt="фото галереи работ"
-                  class="card-img"
-                />
+                <div class="overlay-make">
+                  <img
+                    src="./images/project2.jpg"
+                    alt="фото галереи работ"
+                    class="card-img"
+                  />
+                  <p class="img-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="body-card-text-box">
                   <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
                   <p class="card-subtitle">Дизайн</p>
@@ -127,11 +134,18 @@
             </li>
             <li class="portfolio-cards-item body-card-item">
               <a href="" class="card-link link">
-                <img
-                  src="./images/project3.jpg"
-                  alt="фото галереи работ"
-                  class="card-img"
-                />
+                <div class="overlay-make">
+                  <img
+                    src="./images/project3.jpg"
+                    alt="фото галереи работ"
+                    class="card-img"
+                  />
+                  <p class="img-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="body-card-text-box">
                   <h2 class="card-title">Ресторан Seafood</h2>
                   <p class="card-subtitle">Приложение</p>
@@ -140,11 +154,18 @@
             </li>
             <li class="portfolio-cards-item body-card-item">
               <a href="" class="card-link link">
-                <img
-                  src="./images/project4.jpg"
-                  alt="фото галереи работ"
-                  class="card-img"
-                />
+                <div class="overlay-make">
+                  <img
+                    src="./images/project4.jpg"
+                    alt="фото галереи работ"
+                    class="card-img"
+                  />
+                  <p class="img-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="body-card-text-box">
                   <h2 class="card-title">Проект Prime</h2>
                   <p class="card-subtitle">Маркетинг</p>
@@ -153,11 +174,18 @@
             </li>
             <li class="portfolio-cards-item body-card-item">
               <a href="" class="card-link link">
-                <img
-                  src="./images/project5.jpg"
-                  alt="фото галереи работ"
-                  class="card-img"
-                />
+                <div class="overlay-make">
+                  <img
+                    src="./images/project5.jpg"
+                    alt="фото галереи работ"
+                    class="card-img"
+                  />
+                  <p class="img-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="body-card-text-box">
                   <h2 class="card-title">Проект Boxes</h2>
                   <p class="card-subtitle">Приложение</p>
@@ -166,11 +194,18 @@
             </li>
             <li class="portfolio-cards-item body-card-item">
               <a href="" class="card-link link">
-                <img
-                  src="./images/project6.jpg"
-                  alt="фото галереи работ"
-                  class="card-img"
-                />
+                <div class="overlay-make">
+                  <img
+                    src="./images/project6.jpg"
+                    alt="фото галереи работ"
+                    class="card-img"
+                  />
+                  <p class="img-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="body-card-text-box">
                   <h2 class="card-title">Inspiration has no Borders</h2>
                   <p class="card-subtitle">Веб-сайт</p>
@@ -179,11 +214,18 @@
             </li>
             <li class="portfolio-cards-item body-card-item">
               <a href="" class="card-link link">
-                <img
-                  src="./images/project7.jpg"
-                  alt="фото галереи работ"
-                  class="card-img"
-                />
+                <div class="overlay-make">
+                  <img
+                    src="./images/project7.jpg"
+                    alt="фото галереи работ"
+                    class="card-img"
+                  />
+                  <p class="img-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="body-card-text-box">
                   <h2 class="card-title">Издание Limited Edition</h2>
                   <p class="card-subtitle">Дизайн</p>
@@ -192,11 +234,18 @@
             </li>
             <li class="portfolio-cards-item body-card-item">
               <a href="" class="card-link link">
-                <img
-                  src="./images/project8.jpg"
-                  alt="фото галереи работ"
-                  class="card-img"
-                />
+                <div class="overlay-make">
+                  <img
+                    src="./images/project8.jpg"
+                    alt="фото галереи работ"
+                    class="card-img"
+                  />
+                  <p class="img-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="body-card-text-box">
                   <h2 class="card-title">Проект LAB</h2>
                   <p class="card-subtitle">Маркетинг</p>
@@ -205,11 +254,18 @@
             </li>
             <li class="portfolio-cards-item body-card-item">
               <a href="" class="card-link link">
-                <img
-                  src="./images/project9.jpg"
-                  alt="фото галереи работ"
-                  class="card-img"
-                />
+                <div class="overlay-make">
+                  <img
+                    src="./images/project9.jpg"
+                    alt="фото галереи работ"
+                    class="card-img"
+                  />
+                  <p class="img-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="body-card-text-box">
                   <h2 class="card-title">Growing Business</h2>
                   <p class="card-subtitle">Приложение</p>
