--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <h2 class="doing-title">Постоянные клиенты</h2>
             <ul class="our-client-list">
               <li class="our-client-item">
-                <a href="" class="our-client-link">
+                <a href="#" class="our-client-link">
                   <svg class="our-client-icon" width="107" height="92">
                     <use href="./images/icon.svg#logo"></use>
                   </svg>
@@ -505,6 +505,7 @@
               </li>
             </ul>
           </div>
+          
         </div>
       </footer>
     </div>
