--- a/index.html
+++ b/index.html
@@ -505,6 +505,19 @@
               </li>
             </ul>
           </div>
+          <div class="user-email-form">
+            <p class="doing-title-footer">Подпишитесь на рассылку</p>
+            <form  class="user-form" name="email_form" autocomplete="on" novalidate>
+              <label  for="user_email">
+                <input class="user-email-title" type="email" name="email" placeholder="Email" required/>
+              </label>
+              <button class="btn-submit" type="submit">Подписаться
+                <svg class="send-icon" width="24" height="24">
+                  <use href="./images/icon.svg#send1"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
           
         </div>
       </footer>
