--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
         </button>
         <div class="sign-offer">
           <form class="sign-form">
-            <h3 class="sign-text">Оставьте свои данные, мы вам перезвоним</h3>
+            <p class="sign-text">Оставьте свои данные, мы вам перезвоним</p>
             <label>
               <tablet for="user-name" class="modal-field-name">Имя</tablet>
               <input type="name" class="sign-name" id="user-name" name="name">
@@ -567,9 +567,9 @@
               
               <textarea class="sign-comm" name="feedback" rows="5" placeholder="Введите текст"></textarea>
             </label>
-            <label>
+            <label class="text-reg">
               <input class="sign-text-reg" type="checkbox" name="sign-reg" value="check" checked />
-              Соглашаюсь с рассылкой и принимаю Условия договора
+              Соглашаюсь с рассылкой и принимаю <a class="reg-href" href="https://www.google.com.ua/?hl=ru">Условия договора</a>
             </label>
             <button class="sign-btn" type="submit">Отправить</button>
 
